# waterlevel

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
.github/: CODEOWNERS  labeler.yml
.github/actions/spelling/: allow.txt
.github/workflows/: label.yml  rust-clippy.yml  rust.yml
migrations/2022-08-18-203317_create_weather/: up.sql
migrations/2022-08-18-203324_create_waterlevel/: down.sql  up.sql
migrations/2022-08-18-203330_create_config/: up.sql
migrations/2022-08-18-203343_create_webhooks/: up.sql
src/: helpers.rs  lib.rs  main.rs  models.rs  schema.rs
src/handlers/: analytics.rs  config.rs  waterlevel.rs  webhooks.rs
src/routes/: analytics.rs  config.rs  hello.rs  waterlevel.rs  webhooks.rs
src/tests/: database_connection.rs
src/tests/endpoint_tests/: analytics.rs  config.rs  waterlevel.rs  webhooks.rs
tests/: analytics.rs  config.rs  database_connection.rs  health.rs  waterlevel.rs  webhooks.rs
tests/endpoint_tests/: webhooks.rs
