[package]
name = "rocket-test"
authors = ["Grant Lemons"]
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres"] }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
dotenv = "0.15.0"