[package]
name = "waterlevel-backend"
authors = ["Grant Lemons"]
publish = false
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
uuid = {version = "0.8.2", features = ["v4", "serde"]}
serde = { version = "1.0.142", features = ["derive"] }
diesel_geometry = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde_json = "1.0.83"
dotenv = "0.15.0"
diesel_migrations = { version = "1.4.0", default-features = false, features = ["postgres"] }
